--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "firebase": "^9.9.3",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-router-dom": "^6.3.0",
     "sass": "^1.54.4"
   },
