--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-router-dom": "^6.3.0",
-    "sass": "^1.54.4"
+    "sass": "^1.54.4",
+    "sweetalert2": "^11.4.29"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
