Add redux toolkit and API post for add new cart

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ VITE_FIREBASE_PROJECT_ID = "woishop-8b855"
 VITE_FIREBASE_STORAGE_BUCKET = "woishop-8b855.appspot.com"
 VITE_FIREBASE_MESSAGING_SENDER_ID = "1032195570899"
 VITE_FIREBASE_APP_ID = "1:1032195570899:web:5ac9acace2c7dad3f42826"
+
+VITE_API_BASE_URL = "https://dummyjson.com"
